--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,36 @@
 /* GLOBAL STYLE */
 body {
-  background-color: var(--main-background);
-  color: var(--main-color);
+  background-color: #f5f5f5;
+  color: var(--main);
 
-  font-family: Roboto, sans-serif;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: 0.02em;
 }
 
 /* COLOR PALLETE */
 :root {
-  --main-background: #f5f5f5;
-  --main-color: #2e2f42;
-  --secondary-color: #434455;
-  --hero-color: #ffffff;
-  --text-footer: #e7e9fc;
-  --main-logo: #4d5ae5;
-  --secondary-logo: #f4f4fd;
+  /* CTAs, focused, active status, links */
+  --primary-brand: #4d5ae5;
+
+  /* overlays, shadows, headings */
+  --main: #2e2f42;
+
+  /* valid fields, success messages */
+  /* --valid-color:#31D0AA; */
+
+  /* body text */
+  --body-text: #434455;
+
+  /* helper text, deemphasized text */
+  /* --helper-text:#8E8F99; */
+
+  /* accent color, hairlines, subtle backgrounds */
+  --accent: #e7e9fc;
+
+  /* light mode backgrounds,light mode Dialogs/alerts */
+  --background: #f4f4fd;
+
   --focus-button: #404bbf;
-  --secondary-background: #f4f4fd;
 }
 
 /* DELETED MARKERS */
@@ -25,10 +38,15 @@ body {
   list-style-type: none;
 }
 
+/* HIDEN TEXT */
+.hiden-text {
+  font-size: 0px;
+}
+
 /* LOGOTYPE STYLE */
 .logo {
-  color: var(--main-logo);
-  font-family: Raleway, sans-serif;
+  color: var(--primary-brand);
+  font-family: 'Raleway', sans-serif;
 
   font-weight: 800;
   font-size: 18px;
@@ -39,11 +57,11 @@ body {
 }
 
 .logo-header {
-  color: var(--main-color);
+  color: var(--main);
 }
 
 .logo-footer {
-  color: var(--secondary-logo);
+  color: var(--background);
 }
 
 .line-height {
@@ -59,7 +77,7 @@ body {
 
 /* CONTACTS */
 .contacts {
-  color: var(--secondary-color);
+  color: var(--body-text);
 
   font-size: 16px;
   text-decoration: none;
@@ -67,13 +85,13 @@ body {
 
 .contacts:hover,
 .contacts:focus {
-  color: var(--main-logo);
+  color: var(--primary-brand);
 }
 
 /* TITLE SITE */
 .hero {
-  background-color: var(--main-color);
-  color: var(--hero-color);
+  background-color: var(--main);
+  color: #ffffff;
 
   font-weight: 600;
   font-size: 56px;
@@ -81,9 +99,11 @@ body {
   text-align: center;
 }
 
+/* BUTTONS */
+/* button on the hero */
 .button {
-  background-color: var(--main-logo);
-  color: var(--hero-color);
+  background-color: var(--primary-brand);
+  color: #ffffff;
   font-family: inherit;
 
   font-weight: 600;
@@ -97,6 +117,23 @@ body {
 .button:hover,
 .button:focus {
   background-color: var(--focus-button);
+}
+
+/* filters button in the Portfolio  */
+.button-filters {
+  background-color: var(--background);
+  color: var(--primary-brand);
+
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.button-filters:hover,
+.button-filters:focus {
+  background-color: var(--primary-brand);
+  color: #ffffff;
 }
 
 /* MINE CONTENT */
@@ -116,7 +153,7 @@ body {
 }
 
 .list-text {
-  color: var(--secondary-color);
+  color: var(--body-text);
 
   font-size: 16px;
   line-height: 1.5;
@@ -127,16 +164,16 @@ body {
 }
 
 .section-fon {
-  background-color: var(--secondary-background);
+  background-color: var(--background);
 }
 
 /* FOOTER STYLE */
 .footer {
-  background-color: var(--main-color);
+  background-color: var(--main);
 }
 
 .text-footer {
-  color: var(--text-footer);
+  color: var(--accent);
 
   font-size: 16px;
   line-height: 1.5;
