--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,3 @@
-/* GLOBAL STYLE */
-body {
-  background-color: #f5f5f5;
-  color: var(--main);
-
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 0.02em;
-}
-
 /* COLOR PALLETE */
 :root {
   /* CTAs, focused, active status, links */
@@ -30,7 +21,18 @@ body {
   /* light mode backgrounds,light mode Dialogs/alerts */
   --background: #f4f4fd;
 
+  /* hover text for navigation*/
+
   --focus-button: #404bbf;
+}
+
+/* GLOBAL STYLE */
+body {
+  background-color: #f5f5f5;
+  color: var(--main);
+
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.02em;
 }
 
 /* DELETED MARKERS */
@@ -41,6 +43,11 @@ body {
 /* HIDEN TEXT */
 .hiden-text {
   font-size: 0px;
+}
+
+/* ALIGNED TEXT IN SECTION "OUR TEAM" */
+.text-align {
+  text-align: center;
 }
 
 /* LOGOTYPE STYLE */
@@ -70,9 +77,16 @@ body {
 
 /* MAIN NAVIGATION */
 .nav-links {
+  color: inherit;
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
+  text-decoration: none;
+}
+
+.nav-links:hover,
+.nav-links:focus {
+  color: var(--body-text);
 }
 
 /* CONTACTS */
@@ -99,7 +113,6 @@ body {
   text-align: center;
 }
 
-/* BUTTONS */
 /* button on the hero */
 .button {
   background-color: var(--primary-brand);
@@ -114,12 +127,12 @@ body {
   cursor: pointer;
 }
 
-.button:hover,
+/* .button:hover,
 .button:focus {
-  background-color: var(--focus-button);
-}
+  background-color: var(--primary-brand);
+} */
 
-/* filters button in the Portfolio  */
+/* FILTERS BUTTON IN THE PORTFOLIO  */
 .button-filters {
   background-color: var(--background);
   color: var(--primary-brand);
@@ -140,7 +153,7 @@ body {
 .section-title {
   font-weight: 600;
   font-size: 36px;
-  line-height: 1.33;
+  line-height: 1.11;
   text-align: center;
   text-transform: capitalize;
 }
@@ -149,20 +162,15 @@ body {
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
-  text-decoration: none;
 }
 
 .list-text {
   color: var(--body-text);
 
-  font-size: 16px;
   line-height: 1.5;
 }
 
-.text-align {
-  text-align: center;
-}
-
+/* FON OF SECTION "OUR TEAM" */
 .section-fon {
   background-color: var(--background);
 }
@@ -177,5 +185,12 @@ body {
 
   font-size: 16px;
   line-height: 1.5;
-  text-decoration: none;
+}
+
+/* TEXT BEHIND A PICTURE ON THE PORTFOLIO PAGE */
+.text-behind {
+  color: var(--background);
+
+  font-size: 16px;
+  line-height: 1.5;
 }
