--- a/css/styles.css
+++ b/css/styles.css
@@ -1,154 +1,52 @@
-/* COLOR PALLETE */
 :root {
-  /* CTAs, focused, active status, links */
-  --primary-brand: #4d5ae5;
+  /* color palette */
+  --color-main: #2e2f42;
+  --color-secondary: #434455;
+  --color-background: #f4f4fd;
+  --color-accent: #4d5ae5;
 
-  /* overlays, shadows, headings */
-  --main: #2e2f42;
-
-  /* valid fields, success messages */
-  /* --valid-color:#31D0AA; */
-
-  /* body text */
-  --body-text: #434455;
-
-  /* helper text, deemphasized text */
-  /* --helper-text:#8E8F99; */
-
-  /* accent color, hairlines, subtle backgrounds */
-  --accent: #e7e9fc;
-
-  /* light mode backgrounds,light mode Dialogs/alerts */
-  --background: #f4f4fd;
-
-  /* hover text for navigation*/
-  --focus-button: #404bbf;
+  /* font */
+  --font-main: 'Roboto', sans-serif;
+  --font-secondary: 'Raleway', sans-serif;
 }
 
 /* GLOBAL STYLE */
 body {
-  background-color: #f5f5f5;
-  color: var(--main);
-
-  font-family: 'Roboto', sans-serif;
-
+  font-family: var(--font-main);
   letter-spacing: 0.02em;
+  color: var(--color-main);
+
+  background-color: #f5f5f5;
 }
 
-/* DELETED MARKERS */
+/* ---------- COMPONENTS ---------- */
+/* deleted markers */
 .list {
-  list-style-type: none;
+  list-style: none;
 }
 
-/* HIDEN TEXT */
-.hiden-text {
+/* deleted unerline */
+.link {
+  text-decoration: none;
+}
+
+/* hiden text */
+.hiden {
   font-size: 0px;
 }
 
-/* ALIGNED TEXT IN SECTION "OUR TEAM" */
-.text-align {
-  text-align: center;
-}
-
-/* LOGO STYLE */
+/* logo */
 .logo {
-  color: var(--primary-brand);
-  font-family: 'Raleway', sans-serif;
-
+  font-family: var(--font-secondary);
   font-weight: 800;
   font-size: 18px;
   line-height: 1.33;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-decoration: none;
+  color: var(--color-accent);
 }
 
-.logo-header {
-  color: var(--main);
-}
-
-.logo-footer {
-  color: var(--background);
-}
-
-.line-height {
-  line-height: 1.17;
-}
-
-/* MAIN NAVIGATION */
-.nav-links {
-  color: inherit;
-  font-weight: 600;
-  line-height: 1.5;
-  text-decoration: none;
-}
-
-.nav-links:hover,
-.nav-links:focus {
-  color: var(--body-text);
-}
-
-/* CONTACTS */
-.contacts {
-  color: var(--body-text);
-
-  line-height: 1.5;
-  text-decoration: none;
-}
-
-.contacts:hover,
-.contacts:focus {
-  color: var(--primary-brand);
-}
-
-/* TITLE SITE */
-.hero {
-  background-color: var(--main);
-  color: #ffffff;
-
-  font-weight: 600;
-  font-size: 56px;
-  line-height: 1.07;
-  text-align: center;
-}
-
-/* button on the hero */
-.button {
-  background-color: var(--primary-brand);
-  color: #ffffff;
-  font-family: inherit;
-
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 0.04em;
-
-  cursor: pointer;
-}
-
-/* .button:hover,
-.button:focus {
-  background-color: var(--primary-brand);
-} */
-
-/* FILTERS BUTTON IN THE PORTFOLIO  */
-.button-filters {
-  background-color: var(--background);
-  color: var(--primary-brand);
-
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-}
-
-.button-filters:hover,
-.button-filters:focus {
-  background-color: var(--primary-brand);
-  color: #ffffff;
-}
-
-/* MINE CONTENT */
+/* title section */
 .section-title {
   font-weight: 600;
   font-size: 36px;
@@ -157,37 +55,199 @@ body {
   text-transform: capitalize;
 }
 
-.list-items {
+/* title item */
+.item-title {
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
 }
 
-.item-text {
-  color: var(--body-text);
-
+/* main text */
+.text {
   line-height: 1.5;
+  color: var(--color-secondary);
+}
+/* ---------- /COMPONENTS ---------- */
+
+/* ---------- HEADER ---------- */
+.header {
 }
 
-/* FON OF SECTION "OUR TEAM" */
-.section-fon {
-  background-color: var(--background);
+.header-nav {
 }
 
-/* FOOTER STYLE */
+.header-logo {
+  color: var(--color-main);
+}
+
+.header-list {
+}
+
+.header-link {
+  font-weight: 600;
+  line-height: 1.5;
+  color: var(--color-main);
+}
+
+.header-link:hover,
+.header-link:focus {
+  color: var(--color-secondary);
+}
+
+.header-contacts {
+}
+
+.header-contact {
+  line-height: 1.5;
+  color: var(--color-secondary);
+}
+
+.header-contact:hover,
+.header-contact:focus {
+  color: var(--color-accent);
+}
+/* ---------- /HEADER ---------- */
+
+/* ---------- HERO SECTION ---------- */
+.hero {
+}
+
+.hero-title {
+  font-weight: 600;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  color: #ffffff;
+
+  background-color: var(--color-main);
+}
+
+.btn {
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.18;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+
+  background-color: var(--color-accent);
+
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:focus {
+}
+/* ---------- /HERO SECTION ---------- */
+
+/* ---------- ABOUT SECTION ---------- */
+.about {
+}
+
+.about-title {
+}
+
+.about-list {
+}
+
+.about-items {
+}
+
+.about-text {
+}
+/* ---------- /ABOUT SECTION ---------- */
+
+/* ---------- WHAT ARE ... SECTION ---------- */
+.direction {
+}
+
+.direction-title {
+}
+
+.direction-item {
+}
+/* ---------- /WHAT ARE ... SECTION ---------- */
+
+/* ---------- OUR TEAM SECTION ---------- */
+.team {
+  background-color: var(--color-background);
+}
+
+.team-title {
+}
+
+.team-list {
+  text-align: center;
+}
+
+.team-item {
+}
+
+.team-text {
+}
+/* ---------- /OUR TEAM SECTION ---------- */
+
+/* ---------- FOOTER ---------- */
 .footer {
-  background-color: var(--main);
+  background-color: var(--color-main);
 }
 
-.text-footer {
-  color: var(--accent);
+.footer-logo {
+  color: var(--color-background);
+}
 
+/* line-height for footer-logo */
+.line-height {
+  line-height: 1.17;
+}
+
+.footer-text {
   line-height: 1.5;
+  color: #e7e9fc;
+}
+/* ---------- /FOOTER ---------- */
+
+/* ---------- PORTFOLIO ---------- */
+
+/* filter buttons */
+.filter-list {
 }
 
-/* TEXT BEHIND A PICTURE ON THE PORTFOLIO PAGE */
-.text-behind {
-  color: var(--background);
-
+.filter-btn {
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 16px;
   line-height: 1.5;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: var(--color-accent);
+
+  background-color: var(--color-background);
+
+  cursor: pointer;
 }
+
+.filter-btn:hover,
+.filter-btn:focus {
+  color: var(--color-background);
+
+  background-color: var(--color-accent);
+}
+
+/* examples */
+.examples-list {
+}
+
+.examples-item {
+}
+
+.examples-text {
+}
+
+.examples-text-behind {
+  line-height: 1.5;
+  color: var(--color-background);
+}
+/* ---------- /PORTFOLIO ---------- */
